# pyloki

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.cfg
examples/: ffa_accel.ipynb  ffa_freq.ipynb  ffa_jerk.ipynb  ffa_period.ipynb  optimal_thresholds.ipynb  pruning_accel.ipynb  pruning_jerk.ipynb  pyloki_ep_accel.ipynb  pyloki_ep_circular.ipynb  pyloki_ep_jerk.ipynb  pyloki_ffa_accel.ipynb  pyloki_ffa_freq.ipynb  pyloki_ffa_jerk.ipynb  test_ffa_accel.ipynb  test_ffa_jerk.ipynb  test_ffa_period.ipynb  thresholds.ipynb
pruning/: base.py  baseplot.py  chebyshev.py  config.py  defaults.py  ffa.py  kepler.py  kernels.py  main.py  math.py  periodogram.py  polynomial_fit.py  prune.py  scores.py  simulate.py  thresholds.py  thresholds_dyn.py  thresholds_dynamic.py  timeseries.py  utils.py
pruning/apps/: prn_search.py
pruning/core/: __init__.py  basic.py  chebyshev.py  defaults.py
pruning/detect/: scores.py  thresholds.py
pruning/io/: timeseries.py
pruning/simulate/: modulate.py  pulse.py
pruning/utils/: math.py  misc.py  np_utils.py  plotter.py
pyloki/: config.py  ffa.py  kepler.py  main.py  pattern.py  periodogram.py  prune.py  search.py
pyloki/apps/: pyloki_viewer.py
pyloki/core/: __init__.py  basic.py  chebyshev.py  circular.py  common.py  defaults.py  dynamic_cheby.py  dynamic_circular.py  dynamic_ffa.py  dynamic_prune.py  dynamic_taylor.py  dynamic_taylor_fixed.py  fold.py  taylor.py  taylor_fixed.py
pyloki/cuda/: __init__.py  kernels.py
pyloki/detect/: scores.py  thresholds.py
pyloki/detection/: schemes.py  scoring.py  thresholding.py
pyloki/dynamic/: __init__.py  dyn_circular_cheby.py  dyn_circular_taylor.py  dyn_circular_taylor_fixed.py  dyn_pffa.py  dyn_poly_cheby.py  dyn_poly_taylor.py  dyn_poly_taylor_fixed.py
pyloki/io/: cands.py  timeseries.py
pyloki/sensitivity/: sim_ffa.py
pyloki/simulate/: pulse.py
pyloki/simulation/: modulate.py  pulse.py
pyloki/utils/: math.py  maths.py  misc.py  np_utils.py  psr_utils.py  snail.py  suggestion.py  timing.py  transforms.py  world_tree.py
src/pyloki/: __init__.py  config.py  ffa.py  periodogram.py  prune.py  search.py
src/pyloki/core/: __init__.py  chebyshev.py  circular.py  common.py  taylor.py
src/pyloki/dynamic/: __init__.py  dyn_circular_taylor.py  dyn_pffa.py  dyn_poly_cheby.py  dyn_poly_taylor.py
src/pyloki/io/: cands.py
src/pyloki/simulation/: modulate.py  pulse.py
src/pyloki/utils/: maths.py  misc.py  np_utils.py  psr_utils.py  snail.py  timing.py  transforms.py  world_tree.py
tests/: cheby.py  mat_inv_tests.py  test_maths.py  tmp.py
