[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyloki"
version = "0.6.0"
description = "Detecting Pulsars"
readme = "README.md"
authors = [
    { name = "Pravir Kumar", email = "pravirka@gmail.com" },
    { name = "Barak Zackay", email = "bzackay@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=2.0",
    "numba",
    "astropy",
    "xarray",
    "attrs",
    "click",
    "rich",
    "matplotlib",
    "seaborn",
    "rocket-fft",
    "h5py",
    "sigpyproc @ git+https://github.com/FRBs/sigpyproc3.git",
]

[project.urls]
Repository = "https://github.com/pravirkr/pyloki"

[project.optional-dependencies]
cuda = [
    "cuda-python",
    "numba-cuda",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pytest-sugar",
    "pytest-benchmark",
    "mypy",
]
docs = ["sphinx", "sphinx-book-theme", "sphinx-click", "myst-nb"]
develop = ["ruff"]

[project.scripts]
pyloki_viewer = "pyloki.apps.pyloki_viewer:main"

[tool.ruff]
include = [
    "pyproject.toml",
    "pyloki/**/*.py",
    "tests/**/*.py",
    "examples/**/*.ipynb",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "ANN003",
    "PLR2004",
    "PD901",
    "G004",
    "E712",
    "FBT001",
    "TD",
    "FIX",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 20
max-statements = 100
max-branches = 20

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = "tests"

[tool.coverage.paths]
source = ["./pyloki/"]

[tool.coverage.run]
omit = ["tests/*", "*__init__.py"]

[tool.coverage.report]
show_missing = true
#fail_under = 85
ignore_errors = true
exclude_lines = ['raise AssertionError', 'raise NotImplementedError']

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
disable_error_code = "attr-defined"
