[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "pyloki"
version = "0.7.0"
description = "Detecting Pulsars"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pravir Kumar", email = "pravirka@gmail.com" },
    { name = "Barak Zackay" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=2.0",
    "numba>=0.63.0",
    "astropy",
    "xarray",
    "attrs",
    "click",
    "rich",
    "matplotlib",
    "seaborn",
    "rocket-fft",
    "h5py",
    "sigpyproc @ git+https://github.com/FRBs/sigpyproc3.git",
]

[project.urls]
Repository = "https://github.com/pravirkr/pyloki"

[project.optional-dependencies]
tests = [
    "pytest>=9.0",
    "pytest-cov",
    "pytest-randomly",
    "pytest-sugar",
    "pytest-benchmark",
    "pytest-mock",
]
dev = ["ruff", "ty"]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-click",
    "sphinx-copybutton",
    "numpydoc",
    "myst-nb",
    "jupyter_sphinx",
    "sphinx-design",
]

[project.scripts]
pyloki_viewer = "pyloki.apps.pyloki_viewer:main"

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "examples/**/*.ipynb",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "ANN003",
    "PLR2004",
    "G004",
    "E712",
    "FBT001",
    "FBT002",
    "TD",
    "FIX",
]

[tool.ruff.lint.per-file-ignores]
"src/pyloki/**/*.py" = ["E402"]
"examples/**/*.ipynb" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 20
max-statements = 100
max-branches = 20

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]
exclude = ["src/pyloki/main.py", "tests", "docs"]

[tool.ty.rules]
index-out-of-bounds = "ignore"
unresolved-import = "ignore"
not-iterable = "ignore"        # For Numba prange

[[tool.ty.overrides]]
include = [
    "src/pyloki/dynamic/*.py",
    "src/pyloki/detection/thresholding.py",
    "src/pyloki/utils/snail.py",
    "src/pyloki/utils/world_tree.py",
]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-return-type = "ignore"
unresolved-attribute = "ignore"


[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["../src/"]

[tool.coverage.run]
omit = ["tests/*", "docs/*", "*__init__.py", "*_types.py"]

[tool.coverage.report]
show_missing = true
#fail_under = 85
ignore_errors = true
exclude_lines = [
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'except ModuleNotFoundError:',
    'if __name__ == "__main__":',
]
